--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -2,8 +2,12 @@ html{
     font-family: 'Andika New Basic', sans-serif;
 }
 #mapid { 
-    height: 180px; 
+    height: 560px; 
 }
+.nav-item {
+    margin:0 20px;
+}
+
 
 #preloader {
     position: fixed;
