--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -1,7 +1,10 @@
 html{
     font-family: 'Andika New Basic', sans-serif;
-
-    
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 .nav-item {
     margin:0 20px;
