--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -6,16 +6,40 @@ html{
     margin: 0;
     box-sizing: border-box;
 }
+
 .nav-item {
-    margin:0 20px;
+    margin:0 5px;
+    width: 60px;
 }
 
 
 #mapid { 
-    height: 560px; 
+    height: 580px; 
+    margin-top: 0px;
+    position:relative;
     
 }
+#btnwiki{
+    margin-right: 15px;
+}
+.container {
+    position:fixed;
+    width: 220px;
+    height: 50px;
+    background-color: black;
+    bottom: 20px;
+    right: 200px;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: height 2s;
+    z-index: 2;
+    overflow: hidden;
 
+}
+.container:hover {
+    height: 300px;
+  }
 
 
 #preloader {
