--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -9,38 +9,56 @@ html{
 
 .nav-item {
     margin:0 5px;
-    width: 90px;
-
+    width: 100px;
+    margin: 15px 0px 15px 20px;
 }
+
+.main {
+    height: 583px;
+}
+
 
 
 #mapid { 
-    height: 700px; 
-    margin-top: 80px;
+    height: 583px;
+    margin-top: 50px;
+    border: 1px solid black;
+    position:relative;
 
     
 }
-#btnwiki{
-    margin-right: 15px;
+.recenter{
+    position: relative;
+    float:right;
+    margin-top: 450px;
+    width:30px;
+    height:30px;
+    margin-right: 20px;
+    border: 1px solid black;
+    z-index: 2;
+
 }
+
 .container {
     position:fixed;
-    width: 220px;
+    width: 300px;
     height: 50px;
     background-color: black;
     bottom: 20px;
-    right: 200px;
+    right: 100px;
     color: white;
     padding-left: 20px;
     padding-right: 20px;
     transition: height 2s;
-    z-index: 2;
     overflow: hidden;
+    border: 1px solid palevioletred;
+    z-index: 2;
 
 }
 .container:hover {
     height: 500px;
   }
+
 
 
 
@@ -93,20 +111,26 @@ html{
 
 
 @media only screen and (max-width: 375px) {
-    body {
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
     
-    }
-    img {
-        display: none;
-    }
     .nav-item {
         margin:0 5px;
-        width: 70px;
-        margin: 15px 10px;
+        width: 100px;
+        margin: 15px 0px 15px 20px;
     }
-    .nav-item option {
+    .main {
+        height: 524px;
+    }
+    
+    #mapid { 
+        height: 524px;
+    }
 
-    }
+    
   }
 
 /* Small devices (landscape phones, 576px and up)  */
