--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -1,10 +1,11 @@
-html{
-    font-family: 'Andika New Basic', sans-serif;
-}
+
+   
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Andika New Basic', sans-serif;
+
 }
 
 .nav-item {
@@ -13,9 +14,11 @@ html{
     margin: 15px 0px 15px 20px;
 }
 
-.main {
-    height: 583px;
-}
+div.main {
+    height: 633px;
+    width: 100%;
+    overflow: hidden;
+}  
 
 
 
@@ -25,28 +28,17 @@ html{
     border: 1px solid black;
     position:relative;
     z-index: 1;
-
+    overflow: hidden;
     
 }
-.recenter{
-    position: relative;
-    float:right;
-    margin-top: 450px;
-    width:30px;
-    height:30px;
-    margin-right: 20px;
-    border: 1px solid black;
-    z-index: 2;
 
-}
 
 .container {
-    position:fixed;
-    width: 300px;
-    height: 50px;
+    position:absolute;
+    right: 300px;
+    height:50px;
     background-color: black;
-    bottom: 20px;
-    right: 100px;
+    bottom: 0px;
     color: white;
     padding-left: 20px;
     padding-right: 20px;
@@ -58,9 +50,22 @@ html{
 }
 .container:hover {
     height: 500px;
+
   }
 
-
+.container p {
+    display: inline-block;
+}
+.recenter{
+    position:relative;
+    width: 30px;
+    height:30px;
+    float:right;
+    bottom: 150px;
+    right: 20px;
+    z-index: 2;
+   
+}
 
 
 #preloader {
