--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -14,10 +14,11 @@ img.logo{
 }
 
 .nav-item {
-    margin:0 5px;
-    width: 100px;
+  
+    width: 140px;
     margin: 15px 0px 15px 20px;
 }
+
 
 div.main {
     height: 633px;
@@ -38,33 +39,30 @@ div.main {
 }
 
 
-.container {
+div.container {
     position:absolute;
-    right: 340px;
-    height:50px;
+    right: 330px;
+    height:40px;
     bottom: 0px;
-    background-color:black;
-    color: white;
     padding-left: 15px;
     padding-right: 20px;
     transition: height 2s;
     overflow: hidden;
     z-index: 2;
-
-}
-.container:hover {
-    height: 600px;
-
-  }
-
-div.container.w-50 {
-   
     line-height: 30px;
     background-color:rgba(245, 246, 248, 0.856);
     color:black;
     font-weight: bold;
-
+    width:680px;
+    border-radius: 25px 25px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.container:hover {
+    height: 580px;
+
+  }
+
+
 table{
     width: 100%;
 }
@@ -85,13 +83,14 @@ tr, td{
 
  h3{
     text-align: center;
-    text-decoration: underline;
-    font-weight: bold;
-    
-}
+    }
+ .up img {
+     width: 50px;
+     height:30px;
+ }
 .recenter{
     position:relative;
-    width: 30px;
+    width: 50px;
     height:30px;
     float:right;
     bottom: 150px;
@@ -149,26 +148,122 @@ tr, td{
 
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 575px) {
     * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
+        font-family: 'Andika New Basic', sans-serif;
+        font-size: 16px;
+
+    }
+    html, body {
+        height: 100%;
+        width: 100vw;
+    }
+    div.header {
+        height:81px;
+    }
+    img.logo{
+        width:40px;
+        height:40px;
+        margin-left: 10px;
+        
     }
     
     .nav-item {
-        margin:0 5px;
-        width: 100px;
-        margin: 15px 0px 15px 20px;
+        width: 120px;
+        margin: 15px 10px 15px 10px;
     }
-    .main {
-        height: 524px;
+    ul.nav.justify-content-center {
+        width:300px;
+        height:65px;
     }
     
+    div.main {
+        height: 681px;
+        width: 100%;
+        overflow: hidden;
+        
+    }  
+    
+    
+    
     #mapid { 
-        height: 524px;
+        height: 100%;
+        width:100vw;
+        border: 1px solid black;
+        position:relative;
+        z-index: 1;
+        overflow: hidden;
+        margin-top: 0px;
+        
     }
 
+    div.container {
+        position:absolute;
+        right:1px;
+        height:35px;
+        bottom: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
+        transition: height 2s;
+        z-index: 2;
+        line-height: 24px;
+        background-color:rgba(245, 246, 248, 0.856);
+        color:black;
+        font-weight: bold;
+        width:100%;
+        overflow-x:initial;
+        border-radius: 25px 25px 0px 0px;
+        font-size:14px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .container:hover {
+        height: 600px;
+    
+      }
+    table{
+        width: 100%;
+    }
+    tr{
+        width: 330px;
+        text-align: left;
+    }
+    td {
+        width: 140px;
+        text-align: left;
+    }
+     tr > td:first-child { 
+        width:20px;
+     }
+    
+    .icon_pic img{
+        width:20px;
+        height:20px;
+        margin-right: 5px;
+    }
+    h3 {
+        text-align: center;
+    }
+
+    .up img {
+         width: 50px;
+         height:20px;
+     }
+    
+    
+    .recenter{
+        position:relative;
+        width: 40px;
+        height:30px;
+        float:right;
+        bottom: 150px;
+        right: 20px;
+        z-index: 2;
+       
+    }
+    
     
   }
 
