--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -70,6 +70,9 @@ tr, td{
     width: 600px;
     text-align: left;
 }
+td{
+    width:272px;
+}
  tr > td:first-child { 
     width:55px;
  }
@@ -77,7 +80,6 @@ tr, td{
 .icon_pic img{
     width:27px;
     height:22px;
-    color:cadetblue;
 }
 
 
@@ -88,12 +90,12 @@ tr, td{
      width: 50px;
      height:30px;
  }
-.recenter{
+img#recenter{
     position:relative;
-    width: 50px;
+    width: 40px;
     height:30px;
     float:right;
-    bottom: 150px;
+    bottom: 140px;
     right: 20px;
     z-index: 2;
    
@@ -104,13 +106,14 @@ h6 {
 div.popup {
         text-align:center;
         width:145px;
-        height:170px;
+        height:190px;
         
     }
     img.popup_image {
         text-align:center;
         width:143px;
         height:147px;
+        overflow-y: hidden;
     }
    
     
@@ -236,18 +239,18 @@ div.popup {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     .container:hover {
-        height: 600px;
+        height: 690px;
     
       }
     table{
         width: 100%;
     }
     tr{
-        width: 330px;
+        width: 440px;
         text-align: left;
     }
     td {
-        width: 140px;
+        width: 210px;
         text-align: left;
     }
      tr > td:first-child { 
@@ -269,7 +272,7 @@ div.popup {
      }
     
     
-    .recenter{
+    img#recenter{
         position:relative;
         width: 40px;
         height:30px;
@@ -285,14 +288,16 @@ div.popup {
     div.popup {
         text-align:center;
         width:145px;
-        height:170px;
+        height:190px;
         
     }
     img.popup_image {
         text-align:center;
         width:143px;
         height:147px;
+        overflow-y: hidden;
     }
+   
     
     
   }
