--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -1,125 +1,367 @@
-
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Andika New Basic', sans-serif;
-
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Andika New Basic", sans-serif;
 }
-img.logo{
-    width:40px;
-    height:40px;
-    margin-left: 5px;
+img.logo {
+  width: 40px;
+  height: 40px;
+  margin-left: 5px;
 }
 
 .nav-item.bg-light {
-  
-    width: 140px;
-    margin: 15px 10px 15px 10px;
-    border-radius: 5px;
-    text-align: center;
+  width: 140px;
+  margin: 15px 10px 15px 10px;
+  border-radius: 5px;
+  text-align: center;
 }
-
-
 
 div.main {
-    height: 633px;
-    width: 1366px;
-    overflow: hidden;
-}  
-
-
-
-#mapid { 
-    height: 583px;
-    margin-top: 50px;
-    position:relative;
-    z-index: 1;
-    overflow: hidden;
-    
+  height: 633px;
+  width: 1366px;
+  overflow: hidden;
 }
 
+#mapid {
+  height: 583px;
+  margin-top: 50px;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
 
 div.container {
-    position:absolute;
-    right: 330px;
-    height:40px;
+  position: absolute;
+  right: 330px;
+  height: 40px;
+  bottom: 0px;
+  padding-left: 15px;
+  padding-right: 20px;
+  transition: height 2s;
+  overflow: hidden;
+  z-index: 2;
+  line-height: 30px;
+  background-color: rgba(245, 246, 248, 0.856);
+  color: black;
+  font-weight: bold;
+  width: 680px;
+  border-radius: 25px 25px 0px 0px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.container:hover {
+  height: 580px;
+}
+
+table {
+  width: 100%;
+}
+tr,
+td {
+  width: 600px;
+  text-align: left;
+}
+td {
+  width: 272px;
+}
+tr > td:first-child {
+  width: 55px;
+}
+
+.icon_pic img {
+  width: 27px;
+  height: 22px;
+}
+
+h3 {
+  text-align: center;
+}
+.up img {
+  width: 50px;
+  height: 30px;
+}
+img#recenter {
+  position: relative;
+  width: 40px;
+  height: 30px;
+  float: right;
+  bottom: 140px;
+  right: 20px;
+  z-index: 2;
+}
+h6 {
+  font-weight: bold;
+}
+div.popup {
+  text-align: center;
+  width: 145px;
+  height: 190px;
+}
+img.popup_image {
+  text-align: center;
+  width: 143px;
+  height: 147px;
+}
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background: #fff;
+}
+
+#preloader:before {
+  content: "";
+  position: fixed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  border: 6px solid #f2f2f2;
+  border-top: 6px solid #56829e;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: animate-preloader 1s linear infinite;
+  animation: animate-preloader 1s linear infinite;
+}
+
+@-webkit-keyframes animate-preloader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes animate-preloader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Andika New Basic", sans-serif;
+    font-size: 16px;
+  }
+  html,
+  body {
+    height: 100%;
+    width: 100vw;
+  }
+  div.header {
+    height: 81px;
+    margin-bottom: 0px;
+  }
+  img.logo {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+  }
+  nav.navbar.navbar-expand-sm.bg-secondary.fixed-top {
+    height: 81px;
+  }
+  .nav-item {
+    width: 120px;
+    margin: 15px 0px 15px 20px;
+  }
+
+  div.main {
+    height: 731px;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  #mapid {
+    height: 100%;
+    width: 100vw;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    margin-top: 0px;
+  }
+
+  div.container {
+    position: absolute;
+    right: 1px;
+    height: 35px;
+    bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: height 2s;
+    z-index: 2;
+    line-height: 24px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
+    font-weight: bold;
+    width: 100%;
+    overflow-x: initial;
+    border-radius: 25px 25px 0px 0px;
+    font-size: 14px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .container:hover {
+    height: 690px;
+  }
+  table {
+    width: 100%;
+  }
+  tr {
+    width: 440px;
+    text-align: left;
+  }
+  td {
+    width: 210px;
+    text-align: left;
+  }
+  tr > td:first-child {
+    width: 20px;
+  }
+
+  .icon_pic img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+  }
+  h3 {
+    text-align: center;
+  }
+
+  .up img {
+    width: 50px;
+    height: 20px;
+  }
+
+  img#recenter {
+    position: relative;
+    width: 40px;
+    height: 30px;
+    float: right;
+    bottom: 150px;
+    right: 20px;
+    z-index: 2;
+  }
+  h6 {
+    font-weight: bold;
+  }
+
+  div.popup {
+    text-align: center;
+    width: 145px;
+    height: 190px;
+  }
+  img.popup_image {
+    text-align: center;
+    width: 143px;
+    height: 147px;
+    overflow-y: hidden;
+  }
+}
+
+/* Small devices (landscape phones, 576px and up)  */
+@media only screen and (min-width: 576px) and (max-width: 812px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Andika New Basic", sans-serif;
+  }
+  img.logo {
+    width: 40px;
+    height: 40px;
+    margin-left: 15px;
+  }
+
+  .nav-item {
+    width: 140px;
+    margin: 15px 0px 15px 20px;
+    height: 35px;
+  }
+
+  div.main {
+    height: 350px;
+    width: auto;
+    overflow: hidden;
+  }
+  #mapid {
+    height: 300px;
+    margin-top: 50px;
+    border: 1px solid black;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+  }
+  div.container {
+    position: absolute;
+    right: 88px;
+    height: 30px;
     bottom: 0px;
     padding-left: 15px;
     padding-right: 20px;
     transition: height 2s;
     overflow: hidden;
     z-index: 2;
-    line-height: 30px;
-    background-color:rgba(245, 246, 248, 0.856);
-    color:black;
+    line-height: 24px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
     font-weight: bold;
-    width:680px;
-    border-radius: 25px 25px 0px 0px;
+    width: auto;
+    border-radius: 15px 15px 0px 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.container:hover {
-    height: 580px;
-
+  }
+  .container:hover {
+    height: 300px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+  h3 {
+    text-align: center;
   }
 
+  .up img {
+    width: 50px;
+    height: 20px;
+  }
 
-table{
-    width: 100%;
-}
-tr, td{
-    width: 600px;
-    text-align: left;
-}
-td{
-    width:272px;
-}
- tr > td:first-child { 
-    width:55px;
- }
-
-.icon_pic img{
-    width:27px;
-    height:22px;
-}
-
-
- h3{
-    text-align: center;
-    }
- .up img {
-     width: 50px;
-     height:30px;
- }
-img#recenter{
-    position:relative;
+  img#recenter {
+    position: relative;
     width: 40px;
-    height:30px;
-    float:right;
-    bottom: 140px;
+    height: 30px;
+    float: right;
+    bottom: 150px;
     right: 20px;
     z-index: 2;
-   
-}
-h6 {
-        font-weight:bold;
-    }
-div.popup {
-        text-align:center;
-        width:145px;
-        height:190px;
-        
-    }
-    img.popup_image {
-        text-align:center;
-        width:143px;
-        height:147px;
-    }
-   
-    
-
-
-#preloader {
+  }
+  h6 {
+    font-weight: bold;
+    text-align: center;
+  }
+  div.popup {
+    text-align: center;
+    width: 121px;
+    height: 145px;
+  }
+  img.popup_image {
+    text-align: center;
+    width: 120px;
+    height: 105px;
+    overflow: hidden;
+    margin-top: 0px;
+  }
+  #preloader {
     position: fixed;
     top: 0;
     left: 0;
@@ -128,456 +370,42 @@ div.popup {
     z-index: 9999;
     overflow: hidden;
     background: #fff;
-}
+  }
 
-#preloader:before {
+  #preloader:before {
     content: "";
     position: fixed;
     top: calc(50% - 30px);
     left: calc(50% - 30px);
     border: 6px solid #f2f2f2;
-    border-top: 6px solid #56829e ;
+    border-top: 6px solid #56829e;
     border-radius: 50%;
     width: 60px;
     height: 60px;
     -webkit-animation: animate-preloader 1s linear infinite;
     animation: animate-preloader 1s linear infinite;
-}
-
-@-webkit-keyframes animate-preloader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes animate-preloader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}  
-
-
-@media only screen and (max-width: 575px) {
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Andika New Basic', sans-serif;
-        font-size: 16px;
-
-    }
-    html, body {
-        height: 100%;
-        width: 100vw;
-    }
-    div.header {
-        height:81px;
-        margin-bottom: 0px;
-    }
-    img.logo{
-        width:40px;
-        height:40px;
-        margin-left: 10px;
-        
-    }
-    nav.navbar.navbar-expand-sm.bg-secondary.fixed-top {
-        height: 81px;
-    }
-    .nav-item {
-        width: 120px;
-        margin: 15px 0px 15px 20px;
-    }
-
-    
-    
-    div.main {
-        height: 731px;
-        width: 100%;
-        overflow: hidden;
-        
-    }  
-    
-    
-    
-    #mapid { 
-        height: 100%;
-        width:100vw;
-        position:relative;
-        z-index: 1;
-        overflow: hidden;
-        margin-top: 0px;
-        
-    }
-
-    div.container {
-        position:absolute;
-        right:1px;
-        height:35px;
-        bottom: 0px;
-        padding-left: 10px;
-        padding-right: 10px;
-        transition: height 2s;
-        z-index: 2;
-        line-height: 24px;
-        background-color:rgba(245, 246, 248, 0.856);
-        color:black;
-        font-weight: bold;
-        width:100%;
-        overflow-x:initial;
-        border-radius: 25px 25px 0px 0px;
-        font-size:14px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-    .container:hover {
-        height: 690px;
-    
-      }
-    table{
-        width: 100%;
-    }
-    tr{
-        width: 440px;
-        text-align: left;
-    }
-    td {
-        width: 210px;
-        text-align: left;
-    }
-     tr > td:first-child { 
-        width:20px;
-     }
-    
-    .icon_pic img{
-        width:20px;
-        height:20px;
-        margin-right: 5px;
-    }
-    h3 {
-        text-align: center;
-    }
-
-    .up img {
-         width: 50px;
-         height:20px;
-     }
-    
-    
-    img#recenter{
-        position:relative;
-        width: 40px;
-        height:30px;
-        float:right;
-        bottom: 150px;
-        right: 20px;
-        z-index: 2;
-       
-    }
-    h6 {
-        font-weight:bold;
-    }
-    
-    div.popup {
-        text-align:center;
-        width:145px;
-        height:190px;
-        
-    }
-    img.popup_image {
-        text-align:center;
-        width:143px;
-        height:147px;
-        overflow-y: hidden;
-    }
-   
-    
-    
   }
 
-/* Small devices (landscape phones, 576px and up)  */
-@media only screen and (min-width: 576px) and (max-width: 812px) { 
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Andika New Basic', sans-serif;
-    
+  @-webkit-keyframes animate-preloader {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
     }
-    img.logo{
-        width:40px;
-        height:40px;
-        margin-left: 15px;
-        
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
     }
-    
-    .nav-item {
-      
-        width: 140px;
-        margin: 15px 0px 15px 20px;
-        height: 35px;
+  }
+  @keyframes animate-preloader {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
     }
-
-    div.main {
-        height: 350px;
-        width: auto;
-        overflow: hidden;
-    }  
-    #mapid { 
-        height: 300px;
-        margin-top: 50px;
-        border: 1px solid black;
-        position:relative;
-        z-index: 1;
-        overflow: hidden;
-        
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
     }
-    div.container {
-        position:absolute;
-        right:88px;
-        height:30px;
-        bottom: 0px;
-        padding-left: 15px;
-        padding-right: 20px;
-        transition: height 2s;
-        overflow: hidden;
-        z-index: 2;
-        line-height: 24px;
-        background-color:rgba(245, 246, 248, 0.856);
-        color:black;
-        font-weight: bold;
-        width:auto;
-        border-radius: 15px 15px 0px 0px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-    .container:hover {
-        height: 300px;
-        overflow-x: scroll;
-        overflow-y: scroll;
-    
-      }
-      h3 {
-        text-align: center;
-    }
-
-    .up img {
-         width: 50px;
-         height:20px;
-     }
-    
-    
-    img#recenter{
-        position:relative;
-        width: 40px;
-        height:30px;
-        float:right;
-        bottom: 150px;
-        right: 20px;
-        z-index: 2;
-       
-    }
-    h6 {
-        font-weight:bold;
-        text-align:center;
-    }
-    div.popup {
-        text-align:center;
-        width:121px;
-        height:145px;
-        
-    }
-    img.popup_image {
-        text-align:center;
-        width:120px;
-        height:105px;
-        overflow: hidden;
-        margin-top: 0px;
-        
-    }
-    #preloader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 9999;
-        overflow: hidden;
-        background: #fff;
-    }
-    
-    #preloader:before {
-        content: "";
-        position: fixed;
-        top: calc(50% - 30px);
-        left: calc(50% - 30px);
-        border: 6px solid #f2f2f2;
-        border-top: 6px solid #56829e ;
-        border-radius: 50%;
-        width: 60px;
-        height: 60px;
-        -webkit-animation: animate-preloader 1s linear infinite;
-        animation: animate-preloader 1s linear infinite;
-    }
-    
-    @-webkit-keyframes animate-preloader {
-        0% {
-            -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-        }
-        100% {
-            -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-        }
-    }
-    @keyframes animate-preloader {
-        0% {
-            -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-        }
-        100% {
-            -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-        }
-    }
-    
-   
-    
-    
-    
-
- }
+  }
+}
 
 
-/* Large devices (desktops, 992px and up)  */
-
-/*
-@media (min-width: 992px) { 
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Andika New Basic', sans-serif;
-    
-    }
-    img.logo{
-        width:40px;
-        height:40px;
-        margin-left: 5px;
-    }
-    
-    select#selcountry.nav-item.bg-light {
-      
-        width: 140px;
-        margin: 15px 10px 15px 10px;
-        border-radius: 5px;
-    }
-    
-    
-    div.main {
-        height: 633px;
-        width: 1366px;
-        overflow: hidden;
-    }  
-    
-    
-    
-    #mapid { 
-        height: 583px;
-        margin-top: 50px;
-        border: 1px solid black;
-        position:relative;
-        z-index: 1;
-        overflow: hidden;
-        
-    }
-    
-    
-    div.container {
-        position:absolute;
-        right: 330px;
-        height:40px;
-        bottom: 0px;
-        padding-left: 15px;
-        padding-right: 20px;
-        transition: height 2s;
-        overflow: hidden;
-        z-index: 2;
-        line-height: 28px;
-        background-color:rgba(245, 246, 248, 0.856);
-        color:black;
-        font-weight: bold;
-        width:680px;
-        border-radius: 25px 25px 0px 0px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-    .container:hover {
-        height: 590px;
-        overflow-y: hidden;
-    
-      }
-    
-    
-    table{
-        width: 100%;
-        height:550px;
-        overflow-y: hidden;
-    }
-    tr, td{
-        width: 600px;
-        text-align: left;
-    }
-    td{
-        width:272px;
-    }
-     tr > td:first-child { 
-        width:55px;
-     }
-    
-    .icon_pic img{
-        width:27px;
-        height:22px;
-    }
-    
-    
-     h3{
-        text-align: center;
-        }
-     .up img {
-         width: 50px;
-         height:30px;
-     }
-    img#recenter{
-        position:relative;
-        width: 40px;
-        height:30px;
-        float:right;
-        bottom: 140px;
-        right: 20px;
-        z-index: 2;
-       
-    }
-    h6 {
-            font-weight:bold;
-        }
-    div.popup {
-            text-align:center;
-            width:145px;
-            height:190px;
-            
-        }
-        img.popup_image {
-            text-align:center;
-            width:143px;
-            height:147px;
-        }
-       
- }
-
-*/
