--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -26,7 +26,6 @@ div.main {
 
 #mapid {
   height: 583px;
-  margin-top: 50px;
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -150,6 +149,8 @@ img.popup_image {
   }
 }
 
+
+/* done....*/
 @media only screen and (max-width: 575px) {
   * {
     padding: 0;
@@ -158,11 +159,7 @@ img.popup_image {
     font-family: "Andika New Basic", sans-serif;
     font-size: 16px;
   }
-  html,
-  body {
-    height: 100%;
-    width: 100vw;
-  }
+
   div.header {
     height: 81px;
     margin-bottom: 0px;
@@ -188,7 +185,7 @@ img.popup_image {
 
   #mapid {
     height: 100%;
-    width: 100vw;
+    width: 100%;
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -196,7 +193,7 @@ img.popup_image {
   }
 
   div.container {
-    position: absolute;
+    position: fixed;
     right: 1px;
     height: 35px;
     bottom: 0px;
@@ -209,13 +206,15 @@ img.popup_image {
     color: black;
     font-weight: bold;
     width: 100%;
-    overflow-x: initial;
+    overflow:hidden;
     border-radius: 25px 25px 0px 0px;
     font-size: 14px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .container:hover {
-    height: 690px;
+    height: 500px;
+    overflow-x: scroll;
+    overflow-y: scroll;
   }
   table {
     width: 100%;
@@ -247,11 +246,11 @@ img.popup_image {
   }
 
   img#recenter {
-    position: relative;
+    position: fixed;
     width: 40px;
     height: 30px;
     float: right;
-    bottom: 150px;
+    bottom: 120px;
     right: 20px;
     z-index: 2;
   }
@@ -319,7 +318,7 @@ img.popup_image {
 }
 
 /* Small devices (landscape phones, 576px and up)  */
-@media only screen and (min-width: 576px) and (max-width: 812px) {
+@media only screen and (min-width: 576px) and (max-width: 767px) {
   * {
     padding: 0;
     margin: 0;
@@ -337,22 +336,22 @@ img.popup_image {
     margin: 15px 0px 15px 20px;
     height: 35px;
   }
-
+  div.header{
+    height:81px;
+  }
   div.main {
-    height: 350px;
+    height: 566px;
     width: auto;
     overflow: hidden;
   }
   #mapid {
-    height: 300px;
-    margin-top: 50px;
-    border: 1px solid black;
+    height: 100%;
     position: relative;
     z-index: 1;
     overflow: hidden;
   }
   div.container {
-    position: absolute;
+    position: fixed;
     right: 88px;
     height: 30px;
     bottom: 0px;
@@ -384,7 +383,7 @@ img.popup_image {
   }
 
   img#recenter {
-    position: relative;
+    position: fixed;
     width: 40px;
     height: 30px;
     float: right;
@@ -456,3 +455,323 @@ img.popup_image {
 }
 
 
+@media only screen and (min-width: 768px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Andika New Basic", sans-serif;
+    font-size: 18px;
+  }
+  img.logo {
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+  }
+  div.header {
+    height:86px;
+    width: 100%;
+  }
+
+  .nav.justify-content-center{
+    width: 400px;
+  }
+  select#selcountry.nav-item.bg-light {
+    width: 160px;
+    margin: 16px 0px 15px 20px;
+    height: 40px;
+  }
+  
+
+  div.main {
+    height: 938px;
+    width: 100%;
+    overflow: hidden;
+  }
+  #mapid {
+    height: 100%;
+    position: relative;
+  
+  }
+  div.container {
+    position: fixed;
+    width:700px;
+    right: 32px;
+    height: 30px;
+    bottom: 0px;
+    padding-left: 15px;
+    padding-right: 20px;
+    transition: height 2s;
+    overflow: hidden;
+    z-index: 2;
+    line-height: 26px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
+    font-weight: bold;
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .container:hover {
+    height: 520px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+  table {
+    width: 100%;
+  }
+  tr {
+    width: 650px;
+    text-align: left;
+  }
+  td {
+    width: 300px;
+    text-align: left;
+  }
+  tr > td:first-child {
+    width: 50px;
+  }
+  h3 {
+    text-align: center;
+  }
+
+  .up img {
+    width: 50px;
+    height: 20px;
+  }
+
+  img#recenter {
+    position: fixed;
+    width: 40px;
+    height: 30px;
+    float: right;
+    bottom: 150px;
+    right: 20px;
+    z-index: 2;
+  }
+  h6 {
+    font-weight: bold;
+    text-align: center;
+  }
+  div.popup {
+    text-align: center;
+    width: 121px;
+    height: 145px;
+  }
+  img.popup_image {
+    text-align: center;
+    width: 120px;
+    height: 105px;
+    overflow: hidden;
+    margin-top: 0px;
+  }
+  #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background: #fff;
+  }
+
+  #preloader:before {
+    content: "";
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    border: 6px solid #f2f2f2;
+    border-top: 6px solid #56829e;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: animate-preloader 1s linear infinite;
+    animation: animate-preloader 1s linear infinite;
+  }
+
+  @-webkit-keyframes animate-preloader {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes animate-preloader {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px){
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Andika New Basic", sans-serif;
+    font-size: 18px;
+    max-height: max-device-height;
+  }
+  .nav.justify-content-center{
+    width: 400px;
+  }
+  select#selcountry.nav-item.bg-light {
+    width: 160px;
+    margin: 16px 0px 15px 20px;
+    height: 40px;
+  }
+  div.main {
+    height: 768px;
+    width: 100%;
+    overflow: hidden;
+  }
+  #mapid {
+    height: 100%;
+    position: relative;
+  
+  }
+  
+  div.container {
+    position: fixed;
+    width:900px;
+    right: 62px;
+    height: 30px;
+    bottom: 0px;
+    padding-left: 15px;
+    padding-right: 20px;
+    transition: height 2s;
+    overflow: hidden;
+    z-index: 2;
+    line-height: 26px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
+    font-weight: bold;
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .container:hover {
+    height: 520px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+  img#recenter {
+    position: fixed;
+    width: 50px;
+    height: 40px;
+    float: right;
+    bottom: 50px;
+    right:20px;
+    z-index: 2;
+  }
+}
+
+@media only screen and (min-width: 1280px){
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Andika New Basic", sans-serif;
+    font-size: 20px;
+  }
+  .nav.justify-content-center{
+    width: 380px;
+  
+  }
+  select#selcountry.nav-item.bg-light {
+    width: 170px;
+    height: 40px;
+  }
+button#btnwiki.nav-item.bg-light {
+  margin-left: 25px;
+}
+  div.main {
+    height: 814px;
+    width: 100%;
+    overflow: hidden;
+  }
+  #mapid {
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  
+  }
+
+  div.container {
+    position: fixed;
+    width:1000px;
+    right: 140px;
+    height: 30px;
+    bottom: 0px;
+    padding-left: 15px;
+    padding-right: 20px;
+    transition: height 2s;
+    overflow: hidden;
+    z-index: 2;
+    line-height: 26px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
+    font-weight: bold;
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .container:hover {
+    height: 550px;
+  
+  }
+  img#recenter {
+    position: fixed;
+    width: 50px;
+    height: 40px;
+    float: right;
+    bottom: 50px;
+    right:20px;
+    z-index: 2;
+  }
+
+}
+
+@media only screen and (min-width: 1440px){
+  div.main {
+    height: 814px;
+    width: 100%;
+    overflow: hidden;
+  }
+  #mapid {
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  
+  }
+
+
+  div.container {
+    position: fixed;
+    width:1000px;
+    right: 220px;
+    height: 30px;
+    bottom: 0px;
+    padding-left: 15px;
+    padding-right: 20px;
+    transition: height 2s;
+    overflow: hidden;
+    z-index: 2;
+    line-height: 26px;
+    background-color: rgba(245, 246, 248, 0.856);
+    color: black;
+    font-weight: bold;
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .container:hover {
+    height: 550px;
+  
+  }
+}
