--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -45,6 +45,22 @@ div.main {
   width:28px;
   height:28px;
 }
+.modal-header.info{
+  background-color: #0e17b5;
+}
+#info_btn_cls{
+  background-color: #0e17b5;
+  width:28px;
+  height:28px;
+}
+.modal-header.weather{
+  background-color: #ff531a;
+}
+#weather_btn_cls{
+  background-color: #ff531a;
+  width:28px;
+  height:28px;
+}
 #exampleModalLabel{
   color:white;
 }
@@ -53,29 +69,6 @@ div.modal-content{
 }
 
 
-
-div.container {
-  position: absolute;
-  right: 330px;
-  height: 40px;
-  bottom: 0px;
-  padding-left: 15px;
-  padding-right: 20px;
-  transition: height 2s;
-  overflow: hidden;
-  z-index: 2;
-  line-height: 30px;
-  background-color: rgba(245, 246, 248, 0.856);
-  color: black;
-  font-weight: bold;
-  width: 680px;
-  border-radius: 25px 25px 0px 0px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.container:hover {
-  height: 580px;
-}
-
 table {
   width: 100%;
 }
@@ -83,29 +76,34 @@ tr,
 td {
   text-align: left;
   line-height: 40px;
+  width:100%;
 }
 
 tr > td:first-child {
   width: 50px;
 }
 
+tr > td:last-child {
+  width: 240px;
+}
 
-
-
-
+#adjust_width{
+width:185px;  
+}
+#txtclouds #txttemp #txthum #txtspeed{
+width:239px;
+}
 
 .icon_pic img {
   width: 27px;
   height: 22px;
+  margin-right: 10px;
 }
 
 h3 {
   text-align: center;
 }
-.up img {
-  width: 50px;
-  height: 30px;
-}
+
 img#recenter {
   position: relative;
   width: 40px;
@@ -115,19 +113,8 @@ img#recenter {
   right: 20px;
   z-index: 2;
 }
-h6 {
-  font-weight: bold;
-}
-div.popup {
-  text-align: center;
-  width: 145px;
-  height: 190px;
-}
-img.popup_image {
-  text-align: center;
-  width: 143px;
-  height: 147px;
-}
+
+
 
 #preloader {
   position: fixed;
