--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -61,8 +61,10 @@ div.main {
   width:28px;
   height:28px;
 }
-#exampleModalLabel{
+h5#exampleModalLabel.modal-title{
   color:white;
+  margin-left: auto;
+  margin-right: auto;
 }
 div.modal-content{
   border-radius: 10px 10px;
@@ -104,17 +106,20 @@ h3 {
   text-align: center;
 }
 
-img#recenter {
-  position: relative;
-  width: 40px;
-  height: 30px;
-  float: right;
-  bottom: 140px;
-  right: 20px;
-  z-index: 2;
+
+h6 {
+  font-weight: bold;
 }
-
-
+div.popup {
+  text-align: center;
+  width: 145px;
+  height: 190px;
+}
+img.popup_image {
+  text-align: center;
+  width: 143px;
+  height: 147px;
+}
 
 #preloader {
   position: fixed;
