--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -79,3 +79,8 @@ th.action{
 td.location_padding{
     padding-left: 2.7rem;
 }
+img#plus_img{
+    float:right;
+    margin-top: 1.7rem;
+    margin-right: 1rem;
+}
