--- a/showcase_Website/libs/css/style.css
+++ b/showcase_Website/libs/css/style.css
@@ -147,7 +147,7 @@ img.footer_github_image{
     height:2.5rem;
 }
 
-#modal1, #modal2{
+#modal1, #modal2, #modal3{
     margin-left: 1rem;
     margin-right: 1rem;
    
